# email-management

./: .editorconfig  .gitignore  README.md  pyproject.toml  run_web.sh
.github/workflows/: code-format.yml
docs/: EmailAssistant.md  EmailManager.md  EmailQuery.md  Package.md
src/email_management/: __init__.py  config.py  email_assistant.py  email_manager.py  email_query.py  types.py
src/email_management/assistants/: __init__.py  classify_emails.py  compose_email.py  detect_phishing_for_email.py  evaluate_sender_trust_for_email.py  extract_tasks_from_emails.py  generate_follow_up_for_email.py  natural_language_query.py  prioritize_emails.py  reply.py  reply_suggestions.py  rewrite_email.py  summarize_attachments_for_email.py  summarize_thread_emails.py  summary.py  summary_multi.py  translate_email.py
src/email_management/imap/: query.py  (+3 more)
src/openmail/: __init__.py  config.py  email_assistant.py  email_manager.py  email_query.py  errors.py  logger.py  types.py
tests/: fake_imap_client.py  fake_smtp_client.py  test_assistant.py  test_email_assistant.py  test_email_manager.py  test_email_query.py  test_llm_model.py  test_oauth2_auth.py  test_password_auth.py  test_query.py  test_subscription_detector_and_service.py
webapp/: accounts_api.py  auth.py  context.py  email_api.py  email_overview.py  email_service.py  main.py  model.py  oauth2.py  package-lock.json  ttl_cache.py  utils.py
webapp/frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
webapp/static/: api.js  app.js  style.css  utils.js
webapp/templates/: index.html
(+159 files in other folders)
