[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "email_management"
version = "0.1.0"
description = "API for managing your email"
requires-python = ">=3.8"
dependencies = []

# 👇 IMPORTANT PART
[tool.hatch.build.targets.wheel]
packages = ["email_management"]
include = [
    "email_management/py.typed",
]
